save before VS Code refresh

--- a/templates/snack_detail.html
+++ b/templates/snack_detail.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-    <h2>{{ snack.name }}</h2>
+    <h2>What: {{ snack.name }}</h2>
     <p> Purchased by: {{ snack.purchaser }}</p>
-    <p> {{ snack.description }}</p>
+    <p> Tell me more: {{ snack.description }}</p>
 
 {% endblock content%}
