--- a/templates/snack_list.html
+++ b/templates/snack_list.html
@@ -4,7 +4,7 @@
 {% block content %}
     <ul><h2>Snacks</h2>
     {% for snack in object_list %}
-    <li> {{ snack.name }}</li>
+    <li> <a href = "{% url 'snack_detail' movie.pk %}">{{ snack.name }}</a></li>
     </ul>
     {% endfor %}
 
