code works and tests pass

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,13 @@
     <body>
         <header>
             <nav>
+                <a href = "{% url 'snack_list' %}">Back to Schnacks</a>
             </nav>
         </header>
     
-    {% block content %}
+        {% block content %}
 
-    {% endblock content%}
+        {% endblock content%}
 
     </body>
 </html>
