--- a/templates/snack_list.html
+++ b/templates/snack_list.html
@@ -2,9 +2,10 @@
 {% extends 'base.html'  %}
 
 {% block content %}
-    <ul><h2>Snacks</h2>
+    <h2>Yummy Schnacks</h2>
     {% for snack in object_list %}
-    <li> <a href = "{% url 'snack_detail' movie.pk %}">{{ snack.name }}</a></li>
+    <ul>
+    <li> <a href = "{% url 'snack_detail' snack.pk %}">{{ snack.name }}</a></li>
     </ul>
     {% endfor %}
 
